Done details page alignmment fix

--- a/pages/globals.css
+++ b/pages/globals.css
@@ -31,7 +31,7 @@ input {
 .image_container {
   width: 58.333333%;
 }
-details_container {
+.details_container {
   width: 41.666667%;
 }
 .items-end {
